--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <header class="w3-container w3-center" style="padding:128px 16px" id="home">
     <h1 class="w3-jumbo"><b>Sachin Chandani</b></h1>
     <b>Developer - Engineer - Writer</b>
-    <img title="at Felicity IIIT, Hyderabad" src="pic3.png" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
+    <img  src="pic3.png" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
     <img src="/w3images/profile.jpg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
 <form method="get" action="sachin_CV.pdf">
     <button class="w3-button w3-light-grey w3-padding-large w3-margin-top"> 
