--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <b>Developer - Engineer - Writer</b>
     <img  src="pic3.png" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
     <img src="/w3images/profile.jpg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
-<form method="get" action="CV.pdf">
+<form method="get" action="Resume.pdf">
     <button class="w3-button w3-light-grey w3-padding-large w3-margin-top"> 
     Download Resume 
 	</button>
