--- a/index.html
+++ b/index.html
@@ -104,7 +104,14 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-
+        <div data-date="December 2019 – Present">
+            <h3> Msoft Texas (P) Ltd.</h3>
+            <h4>Software Development Intern (Remote)</h4>
+           
+             <p>
+                Site reliability, back-end, front-end deveopment.
+            </p>
+        </div>
         <div data-date="May 2019 – July 2019">
             <h3> Goldman Sachs Pvt. Ltd., Bengaluru, India</h3>
             <h4>Summer Analyst</h4>
@@ -346,7 +353,7 @@ My project was to migrate an internal Google tool to a different framework as a 
     </div>
 
     <!-- End #education -->
-<!--
+
     <div id="projects" class="background-alt">
         <h2 class="heading">Projects</h2>
         <div class="container">
@@ -384,7 +391,6 @@ My project was to migrate an internal Google tool to a different framework as a 
                     <div class="project-image">
                         <img src="images/StackOverflow.png" />
                     </div>
-                    -->
     </div>
     <!-- End #projects -->
 
