--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 
 						<li><a href="https://www.facebook.com/sachin.chandani1"><img src="fb.svg" class="shadow_icon"></a></li>
 
+						<li><a href="https://open.spotify.com/user/g33nj6g3lch7c7vg5vi8tiss8?si=ahhKmAcbSsq6M90jW8vlSw"><img src="spotify.png" class="shadow_icon"></a></li>
 
 					  	<li><a href="https://www.instagram.com/houseofchandani"><img src="insta.png" class="shadow_icon"></a></li>
 					</ul>
