--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			<header id="header">
 				<img src="pro.jpg" class="shadow">
 				<h1 style="font: 'pacificoregular';"> Sachin Chandani</h1>
-				<p><b>Final Year Undergraduate, IIIT-Hyderabad</b></p>
+				<p><b>Software Engineer at Amazon, Ex-Goldman Sachs, IIIT-Hyderabad</b></p>
 				<nav>
 					<ul>
 						
